# utils

./: .gitattributes  .gitignore  CMakeLists.txt  build.bat  build.sh  install.sh  noncopyable.h  task_queue.h
__tests/: main.cpp
__utils_tests/: bool_t.cpp  ordered_queue.cpp  task_queue.cpp  to_string.cpp  worker.cpp
conan/: conanfile.py  conanfile.txt
include/utils/: bool_t.h  noncopyable.h  ordered_queue.h  task_queue.h  utils.h  worker.h
tests/: bool_t.cpp  ordered_queue.cpp  task_queue.cpp  to_string.cpp  worker.cpp
